Changed PUT /external-data endpoint. Dummy inserter avatars generation.
