# cmd/heimdall-token-analytics/api/swagger.yaml
@@ -9,6 +9,9 @@ definitions:
       creatorDisplayName:
         example: John Doe
         type: string
+      creatorExternalAddress:
+        example: "1234567890"
+        type: string
       creatorUsername:
         example: johndoe
         type: string
@@ -23,6 +26,9 @@ definitions:
         type: string
       holderDisplayName:
         example: Jane Doe
+        type: string
+      holderExternalAddress:
+        example: "9876543210"
         type: string
       holderUsername:
         example: janedoe
@@ -370,49 +376,6 @@ paths:
       - XCom: []
       tags:
       - Tokens
-  /v1/community-tokens/{externalAddressOrViewType}/external-data:
-    put:
-      consumes:
-      - application/json
-      description: Syncs external creator information for a community token.
-      parameters:
-      - description: External address
-        in: path
-        name: externalAddressOrViewType
-        required: true
-        type: string
-      - description: Creator information
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/main.ExternalDataRequestBody'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK - Data synced successfully
-        "400":
-          description: if request body is invalid
-          schema:
-            $ref: '#/definitions/server.ResponseErrorBody'
-        "401":
-          description: if auth token is missing or invalid
-          schema:
-            $ref: '#/definitions/server.ResponseErrorBody'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/server.ResponseErrorBody'
-        "504":
-          description: if request times out
-          schema:
-            $ref: '#/definitions/server.ResponseErrorBody'
-      security:
-      - Nostr: []
-      - XCom: []
-      tags:
-      - Tokens
   /v1/community-tokens/{externalAddressOrViewType}/latest-trades:
     get:
       description: Returns trade history for a specific community token address.
@@ -604,6 +567,44 @@ paths:
             items:
               $ref: '#/definitions/tokenanalytics.CommunityToken'
             type: array
+        "401":
+          description: if auth token is missing or invalid
+          schema:
+            $ref: '#/definitions/server.ResponseErrorBody'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/server.ResponseErrorBody'
+        "504":
+          description: if request times out
+          schema:
+            $ref: '#/definitions/server.ResponseErrorBody'
+      security:
+      - Nostr: []
+      - XCom: []
+      tags:
+      - Tokens
+  /v1/community-tokens/twitterProfiles/external-data:
+    put:
+      consumes:
+      - application/json
+      description: Syncs external creator information for Twitter profile tokens.
+      parameters:
+      - description: Creator and holder information
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/main.ExternalDataRequestBody'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK - Data synced successfully
+        "400":
+          description: if request body is invalid
+          schema:
+            $ref: '#/definitions/server.ResponseErrorBody'
         "401":
           description: if auth token is missing or invalid
           schema:
